# pytest-alchemist

./: README.md  main.py  pyproject.toml
docs/: coverage_model.md  database.md  diff_picker.md  minimizer.md  overview.md  test_runner.md
src/pytest_alchemist/: __init__.py  cli.py  interactive.py  subprocess_utils.py
src/pytest_alchemist/application/: __init__.py  models.py  services.py
src/pytest_alchemist/coverage_analysis/: __init__.py  analyzer.py  models.py
src/pytest_alchemist/database/: __init__.py  facade.py  models.py
src/pytest_alchemist/diff_picker/: __init__.py  models.py  picker.py
src/pytest_alchemist/minimizer/: __init__.py  evaluators.py  interface.py  minimizer.py  models.py
src/pytest_alchemist/minimizer/greedy/: __init__.py  optimizer.py
src/pytest_alchemist/minimizer/mopso/: __init__.py  archive.py  objectives.py  optimizer.py  repair.py
src/pytest_alchemist/test_runner/: __init__.py  logger.py  models.py  runner.py
tests/: test_application.py  test_cli.py  test_coverage_analysis.py  test_database.py  test_diff_picker.py  test_interactive.py  test_minimizer.py  test_runner.py
